fix: set overflow-y to auto for search-content

--- a/static/styles.css
+++ b/static/styles.css
@@ -366,7 +366,7 @@ input:-webkit-autofill:active {
     left: 0;
     right: 0;
     bottom: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     &::-webkit-scrollbar {
         width: 0.5rem;
